--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "trims",
   "version": "0.1.0",
-  "description": "trim string whitespace from object, array or string",
+  "description": "Trimming string whitespace from object, array or string",
   "main": "index.js",
   "scripts": {
     "test": "xo && nyc ava"
